; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Wpc.c_WpcFindDataEntry.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Wpc.c_WpcFindDataEntry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@WPC_DATA_ENTRY_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_4__* @WpcFindDataEntry(i32* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %11 = load i32, i32* @WPC_DATA_ENTRY_SIZE, align 4
  %12 = zext i32 %11 to i64
  %13 = call i8* @llvm.stacksave()
  store i8* %13, i8** %7, align 8
  %14 = alloca i8, i64 %12, align 16
  store i64 %12, i64* %8, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = icmp eq i32* %15, null
  br i1 %16, label %20, label %17

17:                                               ; preds = %2
  %18 = load i8*, i8** %5, align 8
  %19 = icmp eq i8* %18, null
  br i1 %19, label %20, label %21

20:                                               ; preds = %17, %2
  store %struct.TYPE_4__* null, %struct.TYPE_4__** %3, align 8
  store i32 1, i32* %9, align 4
  br label %46

21:                                               ; preds = %17
  %22 = load i8*, i8** %5, align 8
  %23 = call i32 @WpcFillEntryName(i8* %14, i8* %22)
  store i64 0, i64* %6, align 8
  br label %24

24:                                               ; preds = %42, %21
  %25 = load i64, i64* %6, align 8
  %26 = load i32*, i32** %4, align 8
  %27 = call i64 @LIST_NUM(i32* %26)
  %28 = icmp slt i64 %25, %27
  br i1 %28, label %29, label %45

29:                                               ; preds = %24
  %30 = load i32*, i32** %4, align 8
  %31 = load i64, i64* %6, align 8
  %32 = call %struct.TYPE_4__* @LIST_DATA(i32* %30, i64 %31)
  store %struct.TYPE_4__* %32, %struct.TYPE_4__** %10, align 8
  %33 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = load i32, i32* @WPC_DATA_ENTRY_SIZE, align 4
  %37 = call i64 @Cmp(i32 %35, i8* %14, i32 %36)
  %38 = icmp eq i64 %37, 0
  br i1 %38, label %39, label %41

39:                                               ; preds = %29
  %40 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  store %struct.TYPE_4__* %40, %struct.TYPE_4__** %3, align 8
  store i32 1, i32* %9, align 4
  br label %46

41:                                               ; preds = %29
  br label %42

42:                                               ; preds = %41
  %43 = load i64, i64* %6, align 8
  %44 = add nsw i64 %43, 1
  store i64 %44, i64* %6, align 8
  br label %24

45:                                               ; preds = %24
  store %struct.TYPE_4__* null, %struct.TYPE_4__** %3, align 8
  store i32 1, i32* %9, align 4
  br label %46

46:                                               ; preds = %45, %39, %20
  %47 = load i8*, i8** %7, align 8
  call void @llvm.stackrestore(i8* %47)
  %48 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  ret %struct.TYPE_4__* %48
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @WpcFillEntryName(i8*, i8*) #2

declare dso_local i64 @LIST_NUM(i32*) #2

declare dso_local %struct.TYPE_4__* @LIST_DATA(i32*, i64) #2

declare dso_local i64 @Cmp(i32, i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
